Mechanized Assault & eXploration Reloaded 0.2.14 (February, 2024)
=======================================================================
- Fix game initialization: initial resources should be correc now (mining station would have resources)
- Fix loading of TCP games.
- Fix window for resources redistribution (especially when gold > oil).
- Fix some issues when shorten (utf-8) string
- Draw possible shots with path
- Improve some buttons' status ("play"/"pause" of "unit video", "up"/"down" button in loading, "send" button in network lobby)
- Include resinstaller repo inside Maxr repo
- Include CrashReporter in Win32 installer

Mechanized Assault & eXploration Reloaded 0.2.13 (October, 2023)
=======================================================================
- Fix position of alien in multiplayer
- Fix serialization of `cSavedReportDetected` leading to crash

Mechanized Assault & eXploration Reloaded 0.2.12 (September, 2023)
=======================================================================
- update spiritless_po
- update nuget package from sdl2.nuget:2.26.5 to sdl2.nuget:2.28.0
- Fix crash when rubble appears (so when destroying building).
- Fix creation of big rubble.
- Add screen for end of game.
- rework installer pages
- Better support of utf-8 path
- fix resinstaller (transparent color and fix copy of some files)

Mechanized Assault & eXploration Reloaded 0.2.11 (June, 2023)
=======================================================================
-requires C++17 compilers
-fix crash when not enough place for initial resources placement.
-fix map initialization for multi-player.
-disable shortcut for locked button.
-key combination/sequence (Use COMMA/PLUS for special key '+'/','; fix case with 3+ items).
-add *dated* state for unit status string.
-display resource capacity for unit in transporter
-handle storedUnits for casualties report and unit list report.
-building stops sentry.
-allow to have preview path (Shift+Left-Mouse-Button).